--- a/styles/style.css
+++ b/styles/style.css
@@ -1,73 +1,556 @@
-/**************/
-/* CSS REMEDY */
-/**************/
+/* ////////////////////// */
+/* 🎧🎧🎧 CSS REMEDY 🎧🎧🎧 */
+/* ////////////////////// */
 *, *::after, *::before {
   box-sizing:border-box;  
 }
 
-
-
-
-
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
+/* ///////////////////////////// */
+/* 💻💻💻 CUSTOM PROPERTIES 💻💻💻 */
+/* ///////////////////////////// */
 :root {
 	/* startje */
 	--color-text:#000000;
 	--color-background:#ffffff;
 	--accent-color: #F1F1F1;
+	--font-weight-medium: 450;
 }
 
+/* Toepassen op hele website(zoveel mogelijk) */
+a {
+	text-decoration: none;
+}
 
+a:visited {
+	color: var(--color-text);
+}
 
-body {
+ul {
+	list-style: none;
+}
+
+body,
+h2,
+h4,
+button {
 	margin: 0;
 	padding: 0;
 	font-family: 'Helvetica Neue';
-	font-weight: 500;
+	font-weight: var(--font-weight-medium);
 	color: var(--color-text);
-	font-size: .8750em;
+	font-size: .8750rem;
 	text-transform: uppercase;
+}
+
+h3,
+h5 {
+	margin: 0;
+	padding: 0;
+	font-size: 2.8125rem;
+	font-weight: var(--font-weight-medium);
+}
+
+h6 {
+	margin: 0;
+	padding: 0;
+	font-size: 1.375rem;
+	text-transform: none;
+	font-weight: var(--font-weight-medium);
 }
 
 header {
 	width: 100vw;
 }
 
-section:first-of-type {
-	height: 42px;
+/* TICKER */
+header section.ticker {
+	height: auto;
+	width: 100%;
 	background-color: var(--accent-color);
+	overflow: hidden;
 }
 
-nav {
-	height: 107px;
+header section.wrapper {
+	width: 100%;
+	padding: 0 0 0 100%;
+	background-color: transparent;
 }
 
-ul {
-	list-style: none;
+/* TICKER ANIMATION */
+@keyframes ticker {
+	0% {
+		transform: translate3d(0, 0, 0);
+	}
+	100% {
+		transform: translate3d(-100%, 0, 0);
+	}
+}
+
+header article.transition {
+	display: inline-block;
+	white-space: nowrap;
+	padding: 0 100% 0 0;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+	animation-name: ticker;
+	animation-duration: 20s;
+}
+
+header article.transition:hover {
+	animation-play-state: paused;
+	cursor: pointer;
+}
+
+header p {
+	display: inline-block;
+	margin: 0;
+	padding: .5rem .313rem .313rem .313rem;
+	font-size: .75rem;
+}
+
+nav ul {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	align-items: center;
 	margin: 0;
+	padding: .4rem .625rem .635rem .625rem;
+}
+
+nav ul li:first-of-type img {
+	height: 1.75rem;
+	width: auto;
+}
+
+@media (max-width: 48em) {
+	nav > ul > li {
+		display: none;
+	}
+	nav > ul > li:first-child,
+	nav > ul > li:nth-of-type(10),
+	nav > ul > li:last-child {
+		display: inline-block;
+	}
+	/* search */
+	nav > ul > li:last-child {
+		flex-grow: 1;
+		flex-basis: 100%;
+	}
+}
+
+.icons {
+	flex-wrap: nowrap;
+}
+
+nav ul.icons{
+	display: flex;
+	align-items: center;
+	gap: 1.25rem;
+}
+
+nav ul.icons li:first-of-type a img{
+height: 1.438rem;
+width: 1.438rem;
+}
+
+nav ul.icons li a img{
+	height: 1.25rem;
+	width: 1.25rem;
+	}
+
+nav > ul > li:last-child {
+	background-color: var(--color-background);
+	border: 1px solid #000000;
+	padding: .5rem .65rem .375rem .438rem;
+	margin: .5rem 0 0 0;
+}
+
+form {
+	display: block;
+	color: #bcbcbc;
+	font-size: 1.375rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+form img {
+	width: auto;
+	height: 1.563rem;
+}
+
+/* section.banner,
+section.slider:first-of-type
+section.gallery,
+section.icons,
+section.ganniworld {
+	margin: 0 0 .8rem 0;
+} */
+
+/* /////////////////// */
+/* 💗💗💗 Banner 💗💗💗 */
+/* /////////////////// */
+
+section.banner {
+	display: grid;
+	grid-template-rows: 1fr 5%;
+	padding: 0;
+	margin: 0 0 .625rem 0;
+}
+
+section.banner img {
+	width: 100%;
+	grid-row-start: 1;
+	grid-row-end: -1;
+	grid-column-start: 1;
+	grid-column-end: -1;
+}
+
+section.banner h1 {
+	font-size: 2.75em;
+	font-weight: 500;
+	letter-spacing: -.0625rem;
+	line-height: 0.8;
+	align-self: end;
+	margin: 0 .625rem .938rem .625rem;
+	color: var(--color-background);
+	grid-row-start: 1;
+	grid-row-end: 2;
+	grid-column-start: 1;
+	grid-column-end: -1;
+}
+
+section.banner a {
+	grid-row-start: 2;
+	grid-column-start: 1;
+	grid-column-end: -1;
+	align-self: end;
+	margin: 10px;
+}
+
+section.banner h2 {
+	color: var(--color-background);
+}
+
+section.banner a img {
+	filter: invert(100%) sepia(0%) saturate(7453%) hue-rotate(68deg) brightness(98%) contrast(104%);
+}
+
+section {
+	padding: 0 .625rem 0 .625rem;
+}
+
+section.gallery section.slider {
 	padding: 0;
 }
 
-li {
+/* Shop now etc met pijltje */
+a.shop {
 	display: flex;
-	height: 28px;
-	flex-grow: 1;
-	flex-basis: 10em;
+	gap: .625rem;
+	align-items: center;
+	margin: 2.5rem 0 0 0;
 }
 
-a:visited {
-	color: var(--color-text);
-
+/* Grootte van pijltje */
+a.shop img,
+section.gallery a.shop img,
+section.ganniworld article a.shop img {
+	width: .875rem;
+	height: .875rem;
 }
 
-.search {
+/* ///////////////////// */
+/* 🫶🏼🫶🏼🫶🏼 Carousel 🫶🏼🫶🏼🫶🏼 */
+/* ///////////////////// */
 
+section.slider,
+section.gallery,
+section.shopthelook {
+	margin: 0 0 1.25rem 0;
+}
+
+/* Breedte en overflow */
+section.slider,
+section.gallery section.slider {
+	width: 100%;
+	overflow: hidden;
+}
+
+/* Flexbox carousel */
+article.slides,
+section.gallery article.slides {
+	display: flex;
+	gap: .25rem;
+	cursor: pointer;
+	height: auto;
+	overflow-x: auto;
+	scroll-behavior: smooth;
+	position: relative;
+}
+
+/* Flexbox op individuele articles in carouzel */
+article.slides article,
+section.gallery article.slides article {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	top: 0;
+	left: 0;
+	height: auto;
+}
+
+/* Grootte img in carousel */
+article.slides img,
+section.gallery article.slides img {
+	height: auto;
+	object-fit: cover;
+	width: 9rem;
+}
+
+/* Buttons carousel */
+article.slides > button:first-of-type,
+section.gallery article.slides > button:first-of-type {
+	background-color: none;
+	border: none;
+	padding: .2em;
+	height: 1.5em;
+	position: absolute;
+	left: 0;
+	top: 50%;
+}
+
+article.slides > button:nth-of-type(2),
+section.gallery article.slides > button:nth-of-type(2) {
+	background-color: none;
+	border: none;
+	padding: .2em;
+	height: 1.5em;
+	position: absolute;
+	right: 0;
+	top: 50%;
+}
+
+/* Navigatie knoppen carousel */
+article.slides button img,
+section.gallery article.slides button img {
+	object-fit: cover;
+	height: 1.5em;
+	width: auto;
+}
+
+/* Geaccentueerde p's in articles */
+.slides p {
+	background-color: var(--accent-color);
+	padding: .188rem .313rem;
+	width: fit-content;
+}
+
+.slides p:nth-of-type(2) {
+	margin: 0 0 1em 0;
+}
+
+/* Button opmaak carousel */
+button,
+section.gallery a:nth-of-type(2) {
 	background-color: var(--color-background);
-	border: 3px #000000;
+	border: 1px solid var(--color-text);
+	font-size: 1em;
+	padding: 12px;
+	text-align: start;
+}
+
+/* //////////////////// */
+/* 👀👀👀 Gallery 👀👀👀 */
+/* //////////////////// */
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1.25rem;
+}
+
+section.gallery a:nth-of-type(2) {
+	position: absolute;
+	right: 1em;
+	bottom: 1em;
+}
+
+section.gallery article,
+section.gallery article img {
+	position: relative;
+}
+
+section.gallery article img,
+section.ganniworld article a img {
+	height: auto;
+	width: 100%;
+}
+
+/* Margin tussen slider en shop icons weghalen */
+section.gallery section.slider {
+	margin: 0;
+}
+
+section.gallery article.slides article {
+	gap: 1rem;
+}
+
+/* Aangepaste breedte img 'gallery' section */
+section.gallery section.slider article.slides img {
+	width: 8.188rem;
+}
+
+section.gallery > a {
+	margin: .75rem 0 0 0;
+}
+
+/* ////////////////////////// */
+/* ✨✨✨ Shop the look ✨✨✨ */
+/* ////////////////////////// */
+
+/* Extra padding weghalen */
+section.shopthelook section.slider,
+section.shopthelook section.slider article.slides article {
+	padding: 0;
+}
+
+/* Dezelfde button, zonder rand en padding */
+section.shopthelook section.slider article.slides button {
+	border: none;
+	padding: 0;
+}
+
+/* //////////////////////// */
+/* 🍸🍸🍸 GANNI world 🍸🍸🍸 */
+/* //////////////////////// */
+
+/* Alle eerste H6'en in de articles volledig in hoofdletters */
+section.ganniworld article h6:first-of-type,
+footer a h6 {
+	text-transform: uppercase;
+}
+
+/* /////////////////// */
+/* 👋🏼👋🏼👋🏼 FOOTER 👋🏼👋🏼👋🏼 */
+/* /////////////////// */
+
+footer {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+
+footer ul {
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+}
+
+footer ul li ul {
+	padding: 2.5rem .625rem 0 .625rem;
+	gap: .375rem;
+}
+
+footer ul li ul.align {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+	padding: 1.25rem 0 0 0;
+}
+
+footer ul.align li a {
+	display: flex;
+	align-items: center;
+}
+
+footer ul.bcorp li a {
+	display: flex;
+	flex-direction: column;
+}
+
+footer ul.bcorp li a img {
+	width: 4.063rem;
+	height: auto;
+}
+
+footer ul.align,
+footer li.accentcolor {
+	background-color: var(--accent-color);
+}
+
+footer p {
+	text-transform: none;
+	font-size: .75rem;
+}
+
+input.email {
+	border: none;
+	transition: all .15s ease-in 0s;
+	box-shadow: none;
+	padding: .625rem .625rem .625rem 0;
+	height: 2.75rem;
+	width: 100%;
+	font-family: 'Helvetica Neue';
+	font-size: 1.25rem;
+	font-weight: var(--font-weight-medium);
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--accent-color);
+	
+}
+
+input.submit {
+	background-image: url(/images/Arrowright.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	border: none;
+	display: block;
+	width: .875rem;
+	height: auto;
+	padding: 0;
+}
+
+footer li.accentcolor ul li:nth-of-type(2) {
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid var(--color-text);
+	text-align: center;
+}
+
+footer label {
+	text-transform: none;
+	font-size: .75rem;
+}
+
+footer li.country,
+footer li.language {
+	display: flex;
+	flex-direction: column;
+}
+
+footer li.language {
+	margin: 1.125rem 0 0 0;
+}
+
+footer select {
+	box-shadow: none;
+	border: none;
+	border-bottom: 1px solid var(--color-text);
+	transition: all .15s ease-in 0s;
+	height: 2.125rem;
+	width: 100%;
+	font-family: 'Helvetica Neue';
+	font-size: .875rem;
+	font-weight: var(--font-weight-medium);
+}
+
+footer ul.socials {
+	flex-direction: row;
+	gap: 2rem;
+}
+
+footer ul.socials img {
+	width: 1.25rem;
+	height: auto;
 }
